# Fastapi-practice-project

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  fastapi-collection.json  pyproject.toml  test_architecture.py  test_db.py  test_e2e.py  test_ref.py
.github/workflows/: test.yml
app/: README.md  main.py
app/api/: README.md
app/api/v1/: README.md
app/api/v1/routes/: README.md  auth.py  orders.py  posts.py  routes.py  users.py
app/core/: README.md  base_mapper.py  config.py  dependencies.py  exceptions.py  handlers.py  security.py
app/db/: README.md  mongo.py  redis.py
app/db/redis/: README.md  __init__.py  base.py  cache.py  permission_store.py  token_store.py
app/domain/: order.py
app/dto/: order_request.py
app/mappers/: order_mapper.py
app/middlewares/: README.md  cors.py  mongo_sanitizer.py  rate_limiter.py  security_headers.py
app/models/: README.md  post.py  user.py
app/repositories/: README.md  post_repo.py  user_repo.py
app/schemas/: README.md  auth.py  error.py  post.py  user.py
app/services/: README.md  auth_service.py  post_service.py  user_service.py
app/utils/: README.md
docs/: architecture.md
knowledge_base/: README.md  architecture.md  code.md  concept.md
knowledge_base/architecture/: project_structure_overview.md
knowledge_base/concepts/: pydantic_enterprise.md
tests/: conftest.py  test_auth.py  test_posts.py  test_ref_me.py  test_users.py
